--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" async></script>
     <title>Online Calculator</title>
 </head>
 <body>
@@ -12,24 +12,24 @@
         <div class="display"></div>
         <div class="buttons-div">
             <div class="numbers-div">
-                <button class="number button">1</button>
-                <button class="number button">2</button>
-                <button class="number button">3</button>
-                <button class="number button">4</button>
-                <button class="number button">5</button>
-                <button class="number button">6</button>
-                <button class="number button">7</button>
-                <button class="number button">8</button>
-                <button class="number button">9</button>
-                <button class="number button">0</button>
-                <button class="operators button">c</button>
-                <button class="operators button">=</button>
+                <button class="number button" id="1">1</button>
+                <button class="number button" id="2">2</button>
+                <button class="number button" id="3">3</button>
+                <button class="number button" id="4">4</button>
+                <button class="number button" id="5">5</button>
+                <button class="number button" id="6">6</button>
+                <button class="number button" id="7">7</button>
+                <button class="number button" id="8">8</button>
+                <button class="number button" id="9">9</button>
+                <button class="number button" id="0">0</button>
+                <button class="operators button" id="c">c</button>
+                <button class="operators button" id="equals">=</button>
             </div>
             <div class="operators-div">
-                <button class="operators button">+</button>
-                <button class="operators button">-</button>
-                <button class="operators button">x</button>
-                <button class="operators button">÷</button>
+                <button class="operators button" id="plus">+</button>
+                <button class="operators button" id="minus">-</button>
+                <button class="operators button" id="multiplier">x</button>
+                <button class="operators button" id="divider">÷</button>
             </div>
         </div>
     </div>
